@@ -1,3 +1,4 @@
+
 作业要求：
 
 
@@ -15,6 +16,22 @@ java -XX:+UseSerialGC -Xms128m -Xmx128m -XX:+PrintGCDetails -XX:+PrintGCDateStam
 
 可以看到，当初始堆内存和最大堆内存都设置为128m的情况下，使用串行GC，会触发很多次FULL GC直到堆内存溢出，从图中可以看到，在执行第一次FULL GC前的一次Young GC时，
 Young GC完成后，新生代内存空间已被撑满DefNew:39295K->39295K(39296k)，新生代无法给新的对象分配内存空间，同时满足大对象条件，所以很多正在使用的对象被放到老年代，同时对老年代空间做了垃圾清理，老年代空间使用情况从74689K->86974K(87424K),执行了垃圾清理后老年代空间使用情况反而增加，说明老年代正在使用的对象一直在增加并且没有被释放，所以无法被回收，接下来触发了很多次FULL GC，发现都无法回收老年代的对象，最终老年代空间被新增的老年代对象撑满，发生了OOM
+
+-Xms256m -Xmx256m的情况分析，命令如下：
+
+java -XX:+UseSerialGC -Xms256m -Xmx256m -XX:+PrintGCDetails -XX:+PrintGCDateStamps  GCLogAnalysis
+运行结果：
+![image](https://github.com/wenhui5628/JAVA-000/blob/main/Week_02/img/%E4%B8%B2%E8%A1%8CGC-256.png)
+
+可以看到，当初始堆内存和最大堆内存都设置为256m的情况下，跟128m的情况类似，也是新生代已经无法正常进行垃圾清理，最后一次Young GC的情况：DefNew: 69952K->69952K(78656K)，Tenured: 174513K->174666K(174784K)，这时老年代也已经接近占满，触发了FULL GC，从图中可以看到，触发了很多次FULL GC，但是也无法正常回收内存，不管是老年代内存：Tenured: 174754K->174545K(174784K)，还是整个堆空间内存：253408K->244124K(253440K)，都持续处于满载状态，这个时候虽然没有发生OOM，但是实际上也已经无法通过FULL GC回收内存，跟OOM的情况也差不多了，这种情况再持续运行一段时间必然也会发生OOM
+最后的总结信息中也能看到新生代内存使用率为100%，老年代内存使用情况为99%  
+def new generation   total 78656K, used 70436K  
+eden space 69952K, 100% used  
+tenured generation   total 174784K, used 174545K  
+the space 174784K,  99% used  
+
+-Xms512m -Xmx512m的情况分析，命令如下：
+java -XX:+UseSerialGC -Xms512m -Xmx512m -XX:+PrintGCDetails -XX:+PrintGCDateStamps  GCLogAnalysis
 
 
 二、使用压测工具（wrk或sb），演练gateway-server-0.0.1-SNAPSHOT.jar 示例。
